<?xml version="1.0" encoding="utf-8"?><!--  ~ Copyright (C) 2012. Rayman Zhang <raymanzhang@gmail.com>  ~  ~ This program is free software: you can redistribute it and/or modify  ~ it under the terms of the GNU General Public License as published by  ~ the Free Software Foundation, version 3 of the License.  ~  ~ This program is distributed in the hope that it will be useful,  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the  ~ GNU General Public License for more details.  ~  ~ You should have received a copy of the GNU General Public License  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.  --><resources>    <string name="app_name">MDict</string>    <string name="speak">Speak</string>    <string name="add_to_fav">Add To Favorites</string>    <string name="view">View</string>    <string name="invalid_dict">No valid dictionary selected</string>    <string name="empty_entry_list">empty list</string>    <string name="history_back">Back</string>    <string name="history_forward">Forward</string>    <string name="search">Search</string>    <string name="fail_to_open_dict">Fail to open dictionary, error code:%d</string>    <string name="error">Error</string>    <string name="library">Library</string>    <string name="history">History</string>    <string name="favorites">Favorites</string>    <string name="use_multi_dict_mode">Multi-dictionary mode</string>    <string name="use_single_dict_mode">Single dictionary mode</string>    <string name="dict_mode">Dictionary mode</string>    <string name="ok">OK</string>    <string name="cancel">Cancel</string>    <string name="yes">Yes</string>    <string name="no">No</string>    <string name="confirm_quit">Quit MDict?</string>    <string name="quit">Quit</string>    <string name="headword_not_found">\'%s\' not found</string>    <string name="headword_not_found_suggestion" formatted='false'>\'%s\' The word you\'ve entered isn\'t in the dictionary. Click on a spelling suggestion below or try again using the search bar above. %s</string>    <string name="no_dict_selected">No dictionary selected</string>    <string name="clear_all">Clear all</string>    <string name="confirm_clear_all_record">Clear all records?</string>    <string name="add_entry_to_fav">Add entry to favorites</string>    <string name="delete_selected_entry">Delete selected entry</string>    <string name="settings">Settings</string>    <string name="entry_prev">Previous entry</string>    <string name="entry_next">Next entry</string>    <string name="zoom_in">Zoom in</string>    <string name="zoom_out">Zoom out</string>    <string name="delete">Delete</string>    <string name="system_default">System Default</string>    <string name="quit_prompt">Press back key once more to quit</string>    <string name="confirm_install_tts">You don\'t have any TTS engine installed, do you want to install one?</string>    <string name="install_tts">Install TTS Engine</string>    <string name="entries_added">Add %d entries to favorites</string>    <string name="entries_deleted">%d deleted</string>    <string name="entries_selected">%d selected</string>    <string name="navigate">Navigate</string>    <string name="at_least_select_one_dict">At least select one dictionary</string>    <string name="expand_all">Expand all entries</string>    <string name="collapse_all">Collapse all entries</string>    <string name="entry_added_to_fav">\'%s\' added to favorites</string>    <string name="help">Help</string>    <string name="aboutapp">About MDict</string>    <string name="aboutdict">About dictionary</string>    <string name="current_folder">Current Folder:</string>    <string name="mdict_search_hint">Search</string>    <string name="search_setting_description">MDict Dictionary, Wikipedia</string>    <string name="online_reference_loading">Loading…, please wait!</string>    <string name="network_not_available"><![CDATA[<font color=red><b>Network unavailable</b></font>]]></string>    <string name="text_color">Text Color</string>    <string name="background_color">Background Color</string>    <string name="font_face">Font</string>    <string name="hide_toolbar">Hide Toolbar</string>    <string name="show_toolbar">Show Toolbar</string>    <string name="chn_conv">Chinese Conversion</string>    <string-array name="chn_conv_choices">        <item>No Chinese Conversion</item>        <item>To Simplified Chinese</item>        <item>To Traditional Chinese</item>    </string-array>    <string name="fail_to_install_tts_engine">Fail to install TTS Engine</string>    <string name="content_download_begin">Begin download</string>    <string name="content_downloaded"> %d bytes downloaded</string>    <string name="content_download_complete">Download completed</string>    <string name="content_download_error">Download failed: %s</string>    <string name="content_download_canceled">Download canceled</string>    <string name="content_download_failed">Download failed</string>    <string name="error_client_protocol">Network error</string>    <string name="error_io">IO error</string>    <string name="confirm_update">New version found, do you want to upgrade?</string>    <string name="app_update">App update</string>    <string name="already_latest">You already have the latest version installed</string>    <!-- string for setting frame -->    <string name="pref_cate_title_basic_setting">Basic Setting</string>    <string name="pref_cate_title_multi_dict">Multi Dict Mode Setting</string>    <string name="pref_title_email">Email</string>    <string name="pref_summary_email">Your email address</string>    <string name="pref_dialog_title_email">Enter your email address</string>    <string name="pref_title_auto_play_pronunciation">Auto pronounce</string>    <string name="pref_summary_auto_play_pronunciation">Auto play pronunciation for head word</string>    <string name="pref_title_auto_lookup_clipboard">Auto lookup clipboard</string>    <string name="pref_summary_auto_lookup_clipboard">Auto lookup clipboard content when activated</string>    <string name="pref_title_use_finger_gesture">Use finger gesture</string>    <string name="pref_title_high_speed_mode">High Speed Mode</string>    <string name="pref_summary_high_speed_mode">High speed mode may have compatible issue</string>    <string name="pref_title_lock_rotation">Lock rotation</string>    <string name="pref_summary_lock_rotation"></string>    <string name="pref_title_shake_for_random_entry">Shake for random entry</string>    <string name="pref_summary_shake_for_random_entry">Display random entry when shake device</string>    <string name="pref_title_extra_dict_dir">Library directory:</string>    <string name="pref_summary_extra_dict_dir">Directory for dictionaries</string>    <string name="pref_dialog_title_extra_dict_dir">Please enter the directory</string>    <string name="pref_title_show_splash">Show splash screen</string>    <string name="pref_title_use_built_in_ipa_font">Use built-in IPA font</string>    <string name="pref_summary_use_built_in_ipa_font">Check this option if your device can\'t display phonetic        correctly    </string>    <string name="pref_title_use_tts">Use TTS for pronunciation</string>    <string name="pref_summary_use_tts">Use TTS for pronunciation when no sound data found</string>    <string name="pref_title_tts_locale">TTS Language</string>    <string name="pref_dialog_title_tts_locale">Language</string>    <string name="pref_title_tts_engine">TTS Engine</string>    <string name="pref_cate_title_sound_setting">Sound Setting</string>    <string name="pref_title_auto_sip">Auto open software input panel</string>    <string name="pref_summary_auto_sip"></string>    <string name="pref_title_multi_dict_default_expand_all">Expand all entries</string>    <string name="pref_summary_multi_dict_default_expand_all">Expand all entries or only expand the first entry</string>    <string name="pref_title_multi_dict_expand_only_one">Only expand selected entry</string>    <string name="pref_summary_multi_dict_expand_only_one">Expand only the selected entry and collapse others</string>    <string name="pref_title_show_in_notification">Show in notification center</string>    <string name="pref_summary_show_in_notification">Show app icon in notification center for fast access</string>    <string name="pref_title_use_lru_for_dict_order">Auto adjust dictionary order by last usage</string>    <string name="pref_summary_use_lru_for_dict_order">Put last opened dictionary to the top of the dictionary list    </string>    <string name="pref_title_split_view_mode">Use split view mode</string>    <string name="pref_title_use_popover_for_lookup">Use popover for in app lookup</string>    <string name="pref_title_resize_images">Resize images to fix in window</string>    <string name="pref_title_play_audio_in_background">Play audio in background</string>    <string name="pref_title_auto_check_update">Auto check update</string>    <!-- alex 2012-12-07  -->    <string name="pref_title_fixed_dict_title">Fixed dictionary title</string>    <string name="pref_summary_fixed_dict_title">Fixed dictionary title when scroll the content</string>    <string name="pref_title_global_clipboard_monitor">Global clipboard Monitor</string>    <string name="pref_summary_global_clipboard_monitor">Monitor global clipboard to pop up floating window to translate        word    </string>    <string name="un_named_dict_group">Unnamed Group</string>    <string name="please_input_word">Enter words to search</string>    <string name="msg_cannot_add_group">Cannot add a group to another group</string>    <string name="msg_dict_exists_in_group">Dictionary already in this group</string></resources>