<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2012. Rayman Zhang <raymanzhang@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/dict_mode"
          android:icon="@drawable/ic_library"
          android:title="@string/dict_mode"
          android:showAsAction="always" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/multi_dict_mode"
                      android:title="@string/use_multi_dict_mode"
                      android:showAsAction="always|withText" />
                <item android:id="@+id/single_dict_mode"
                      android:title="@string/use_single_dict_mode"
                      android:showAsAction="always|withText" />
            </group>
        </menu>
    </item>
</menu>